--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Paulina Łastowiecka">
     <meta name="description"
-        content="CodeLast to profesjonalne usługi tworzenia stron internetowych w Warszawie. Oferujemy atrakcyjny design, optymalizację SEO i spójność z marką. Skontaktuj się z nami już dziś!">
+        content="CodeLast - profesjonalnie tworzę strony internetowe w Piastowie, w okolicach Warszawy. Oferuję atrakcyjny design, optymalizację SEO i spójność z marką. Skontaktuj się ze mną już dziś!">
     <meta name="keywords"
-        content="tworzenie stron internetowych mazowieckie, warszawa, piastów, seo">
+        content="tworzenie stron internetowych, projektowanie stron, optymalizacja SEO, responsive web design, front-end developer, Warszawa, Piastów, Paulina Łastowiecka">
+    <!-- <div> Icons made by <a href="https://www.freepik.com" title="Freepik">
+            Freepik </a> from <a href="https://www.flaticon.com/"
+            title="Flaticon">www.flaticon.com'</a></div> -->
+    <meta property="og:image" content="/favicon-32x32.png">
 
     <title>CodeLast| WebDev</title>
 
@@ -32,9 +36,8 @@
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
-        defer></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
 </head>
 
 
@@ -64,16 +67,16 @@
         <section id="aboutme" class="about section animate__animated">
             <div class="about__img animate__animated"
                 data-animation="animate__fadeInLeft">
-                <img src="../dist/img/about.webp" width="320px" loading="lazy"
+                <img src="../dist/img/about1.webp" width="320px" loading="lazy"
                     height="560px" alt="working woman" id="portraitIMG">
             </div>
             <div class="about__text animate__animated"
                 data-animation="animate__fadeInRight">
                 <h2 class="about__text-title ">O mnie ...</h2>
                 <p class="about__text-info">
-                    Cześć! Nazywam się Paulina i jestem junior <strong>Web
+                    Cześć! Nazywam się Paulina i jestem <strong>Web
                         Developerem </strong> , specjalizującym się w obszarze
-                    front-endu. Moim celem jest tworzenie ładnych i użytecznych
+                    front-endu. Moim celem jest tworzenie nie tylko ładnych, lecz także użytecznych
                     stron
                     internetowych, które spełniają oczekiwania każdego klienta.
                     Z racji mojego zainteresowania fotografią, zwracam uwagę na
@@ -105,7 +108,8 @@
                     data-animation="animate__fadeInUp">
                     <div class="card__image">
                         <img src="/dist/img/responsive.webp" width="300"
-                            height="200" alt="Responsive Design">
+                            height="200"
+                            alt="Przykład responsywnego projektowania stron internetowych na różnych urządzeniach">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Responsywne strony</h3>
@@ -126,8 +130,9 @@
                 <div class="card animate__animated animate__delay-1s" id="card2"
                     data-animation="animate__fadeInUp">
                     <div class="card__image">
-                        <img src="/dist/img/seo.webp" width="300" height="200"
-                            alt="SEO">
+                        <img src="/dist/img/individual.webp" width="300"
+                            height="200"
+                            alt="Dwie kobiety pracujące przy laptopie">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Indywidualne podejście</h3>
@@ -145,7 +150,8 @@
                     data-animation="animate__fadeInUp">
                     <div class="card__image">
                         <img src="/dist/img/webdesign.webp" width="300"
-                            height="200" alt="Web Design">
+                            height="200"
+                            alt="Wektoryzowana ilustracja koncepcji projektowania stron internetowych">
                     </div>
                     <div class="card__content">
                         <h3 class="card__title">Kreatywny <br> design
@@ -169,10 +175,15 @@
                 szczegółów lub chcesz
                 omówić swoje
                 wymagania i oczekiwania, zapraszam do kontaktu ze mną
-                poprzez adres e-mail. Jestem gotowa odpowiedzieć na Twoje
-                pytania i przedstawić szczegóły mojej oferty. Dziękuję za
+                poprzez formularz kontaktowy lub email. Jestem gotowa
+                odpowiedzieć na Twoje
+                pytania i przedstawić szczegóły mojej oferty.
+                <br>
+                Dziękuję za
                 zainteresowanie moimi usługami i czekam na <a
-                    href="#contact">kontakt</a>!</p>
+                    href="#contact">kontakt</a>!
+            </p>
+
         </section>
         <section id="contact" class="contact section black-section">
             <h2 class="contact__title">
