mobile rwd bug fixed

--- a/index.html
+++ b/index.html
@@ -10,15 +10,18 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Paulina Łastowiecka">
     <meta name="description"
-        content="CodeLast - profesjonalnie tworzę strony internetowe w Piastowie, w okolicach Warszawy. Oferuję atrakcyjny design, optymalizację SEO i spójność z marką. Skontaktuj się ze mną już dziś!">
+        content="Warszawa - profesjonalne strony internetowe. Atrakcyjny design, optymalizacja SEO i spójność z marką. Skontaktuj się ze mną już dziś!">
     <meta name="keywords"
         content="tworzenie stron internetowych, projektowanie stron, optymalizacja SEO, responsive web design, front-end developer, Warszawa, Piastów, Paulina Łastowiecka">
+    <link rel="apple-touch-icon"
+        href="/dist/img/favicon_io2 2/apple-touch-icon.png">
+
     <!-- <div> Icons made by <a href="https://www.freepik.com" title="Freepik">
             Freepik </a> from <a href="https://www.flaticon.com/"
             title="Flaticon">www.flaticon.com'</a></div> -->
     <meta property="og:image" content="/favicon-32x32.png">
 
-    <title>CodeLast| WebDev</title>
+    <title>CodeLast | WebDeveloper</title>
 
     <link rel="shortcut icon" type="image/x-icon"
         href="./dist/img/favicon_io2/favicon.ico">
@@ -54,23 +57,23 @@
             <a href="#offers" class="nav__item">Oferta</a>
             <a href="https://github.com/paulalast" target="_blank"
                 class="nav__item">GitHub</a>
-            <a href="https://portfolio-pl.netlify.app/" target="_blank"
+            <a href="/portfolio/portfolio.html" target="_blank"
                 class="nav__item">Portfolio</a>
             <a href="#contact" class="nav__item">Kontakt</a>
         </div>
     </nav>
     <header class="header section black-section">
-        <h1 class="header__heading"> <span class="header-span">Code</span>Last
-        </h1>
+        <p class="header__heading">CodeLast</p>
         <hr>
-        <p class="header__text">Web Developer</p>
+        <h1 class="header__text"> Profesjonalne Strony&nbsp;Internetowe
+        </h1>
         <a href="#aboutme" class="header__btn btn-special-animation">O mnie</a>
     </header>
     <main>
         <section id="aboutme" class="about section animate__animated">
             <div class="about__img animate__animated"
                 data-animation="animate__fadeInLeft">
-                <img src="../dist/img/about1.webp" width="320px" loading="lazy"
+                <img src="/dist/img/about1.webp" width="320px" loading="lazy"
                     height="560px" alt="working woman" id="portraitIMG">
             </div>
             <div class="about__text animate__animated"
@@ -98,7 +101,8 @@
                         Rozumiem, że każda firma jest inna, dlatego staram się
                         dostosować podejście do indywidualnych wymagań moich
                         klientów. Współpracując ze mną, możesz liczyć na
-                        zaangażowanie i chęć rozwijania się. Projektuję strony
+                        zaangażowanie i chęć rozwijania się. Projektuję
+                        profesjonalne strony
                         internetowe, które są przyjazne dla użytkowników i
                         zoptymalizowane pod urządzenia mobilne, aby sprostać
                         wyzwaniom dynamicznego rynku cyfrowego. Chętnie nawiążę
@@ -113,9 +117,11 @@
                         osiąganiu Twoich celów.
                     </p>
                     <p> Zachęcam Cię
-                        również do odwiedzenia sekcji  <span class="extra-portfolio">
-                            <a href="https://portfolio-pl.netlify.app/"
-                                target="_blank"> PORTFOLIO</a>.
+                        również do odwiedzenia sekcji <span
+                            class="extra-portfolio">
+                            <a href="./portfolio/portfolio.html"
+                                target="_blank">
+                                PORTFOLIO</a>.
                         </span></p>
 
                 </div>
@@ -282,9 +288,9 @@
             <p class="nip"> NIP: 5342644424 | REGON: 520314196</p>
         </div>
     </footer>
-    <script
+    <!-- <script
         src="https://cdnjs.cloudflare.com/ajax/libs/regenerator-runtime/0.13.11/regenerator-runtime.min.js"
-        defer></script>
+        defer></script> -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/dist/js/functions.min.js"></script>
     <script src="/dist/js/main.min.js"></script>
